[gd_scene load_steps=5 format=2]

[ext_resource path="res://quicktheme.tres" type="Theme" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://menudesave.gd" type="Script" id=3]
[ext_resource path="res://DataparaSaves.gd" type="Script" id=4]

[node name="menudesave" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.25
margin_top = -300.0
margin_right = 256.25
margin_bottom = 300.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.25
margin_top = -300.0
margin_right = 256.25
margin_bottom = 300.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.25
margin_top = 229.0
margin_right = 256.75
margin_bottom = 300.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 512.5
margin_bottom = 400.0

[node name="Slot1" type="Button" parent="Panel/VBoxContainer"]
margin_right = 512.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
toggle_mode = true
text = "Save Slot 1 (Empty)"
icon = ExtResource( 2 )

[node name="Slot2" type="Button" parent="Panel/VBoxContainer"]
margin_top = 134.0
margin_right = 512.0
margin_bottom = 265.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
toggle_mode = true
text = "Save Slot 2 (Empty)"
icon = ExtResource( 2 )

[node name="Slot3" type="Button" parent="Panel/VBoxContainer"]
margin_top = 269.0
margin_right = 512.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
toggle_mode = true
text = "Save Slot 3 (Empty)"
icon = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
margin_left = 46.0
margin_top = 438.0
margin_right = 466.0
margin_bottom = 600.0

[node name="Save" type="Button" parent="Panel/VBoxContainer2"]
margin_right = 420.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Save"
script = ExtResource( 4 )

[node name="Load" type="Button" parent="Panel/VBoxContainer2"]
margin_top = 55.0
margin_right = 420.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Load"

[node name="Exit" type="Button" parent="Panel/VBoxContainer2"]
margin_top = 110.0
margin_right = 420.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Exit"

[connection signal="toggled" from="Panel/VBoxContainer/Slot1" to="." method="_on_Slot1_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/Slot2" to="." method="_on_Slot2_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/Slot3" to="." method="_on_Slot3_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer2/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer2/Exit" to="." method="_on_Exit_pressed"]
